<resources>
    <string name="app_name">SqliteSample</string>
    <string name="mail">Email</string>
    <string name="pass">Password</string>
    <string name="repass">Confirm Password</string>
    <string name="rme">Remember Me</string>
    <string name="forgetPass">Forget Password</string>
    <string name="login">Log in</string>
    <string name="reg">Register</string>
    <string name="signup">Sign up</string>
    <string name="phone">Phone number</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="profession">Profession</string>
    <string name="getcurrlocation">Get Current Location</string>
    <string name="uploadImg">Upload Image</string>
    <string name="uploadVideo">Upload Video</string>
    <string name="save">Save</string>

</resources>