<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_gradient"
        tools:context = ".Register">

        <TextView
            android:id="@+id/tagLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_white_rounded"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="16dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="@color/md_grey_600"
            android:textColorHint="@color/md_grey_600"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tagLine" />


        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_white_rounded"
            android:hint="@string/phone"
            android:imeOptions="actionNext"
            android:inputType="number|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="16dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="@color/md_grey_600"
            android:textColorHint="@color/md_grey_600"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_white_rounded"
            android:hint="@string/mail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="16dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="@color/md_grey_600"
            android:textColorHint="@color/md_grey_600"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_white_rounded"
            android:hint="@string/pass"
            android:imeOptions="actionNext"
            android:inputType="textPassword|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="16dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="@color/md_grey_600"
            android:textColorHint="@color/md_grey_600"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <EditText
            android:id="@+id/reenterPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_white_rounded"
            android:hint="@string/repass"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="16dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="@color/md_grey_600"
            android:textColorHint="@color/md_grey_600"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/ripple_effect_black"
            android:text="@string/reg"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reenterPasswordEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>